--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,23 @@
 html {
-  font-size: 16px; 
+  font-size: 16px;
+}
+
+.hidden {
+  display: none;
+}
+
+div, td {
+  border: 1px solid black;
+}
+
+/* this sizing is the default windows calculator size (small)
+  (small)
+  height: min 500px - 100%; Height does not change features
+  width: min 320px - 516px; (medium) 560px - 1024px (large) 1024px+
+*/
+
+td {
+  width: 25%;
+  height: 42px;
+  margin: 0 1px;
 }
