--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,23 +1,139 @@
+/* Universal */
 html {
   font-size: 16px;
+}
+
+body {
+  font-family: "Arial", sans-serif;
+  background: #e6e6e6;
+  box-sizing: border-box;
+  border: 1px solid black;
+}
+
+/* div, td {
+  border: 1px solid black;
+} */
+
+button {
+  height: 100%;
+  width: 100%;
+}
+
+.flex-row {
+  display: flex;
+  align-items: center;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
 }
 
 .hidden {
   display: none;
 }
 
-div, td {
-  border: 1px solid black;
+/* Header */
+header {
+  justify-content: space-between;
+  width: 100%;
+  height: 44px;
 }
+
+header button {
+  padding: 0.75rem;
+  border: 1px solid #e6e6e6;
+  transition: border 0.3s ease;
+}
+
+header button:hover {
+  background: #c7c7c7;
+  border: 1px solid #d6d6d6;
+}
+
+nav h1 {
+  padding: 0.75rem;
+  font-size: 1.5rem;
+  font-weight: normal;
+}
+
+/* Display */
+.display {
+  justify-content: flex-end;
+  align-items: center;
+  height: 88px;
+}
+
+.display h1 {
+  text-align: right;
+  font-size: 3rem;
+  margin-right: 0.75rem;
+}
+
+/* Keyboard */
+div.row#memory {
+  justify-content: space-between;
+  height: 22px;
+}
+
+div.row#memory div {
+  width: 15%;
+}
+
+div.row#memory div button {
+  background: #e6e6e6;
+  font-size: 0.75rem;
+}
+
+div.row#memory div button:hover {
+  background: #c7c7c7;
+}
+
+div.row {
+  justify-content: space-between;
+  height: 44px;
+  margin: 5px 0;
+  padding: 0 5px;
+}
+
+div.row div {
+  width: 24%;
+  height: 100%;
+}
+
+div.row div button {
+  background: #fff;
+
+}
+
+div.row div button:hover {
+  background: #c7c7c7;
+  border: 1px solid #d6d6d6;
+  transition: background 0.5s ease;
+  transition: border 0.3s ease;
+}
+
+.number {
+  font-weight: bold;
+  font-size: 1.4rem;
+}
+
+.big {
+  font-size: 2rem;
+}
+
+
+
+
+
+
+
+
+
+
 
 /* this sizing is the default windows calculator size (small)
   (small)
   height: min 500px - 100%; Height does not change features
   width: min 320px - 516px; (medium) 560px - 1024px (large) 1024px+
 */
-
-td {
-  width: 25%;
-  height: 42px;
-  margin: 0 1px;
-}
