--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,6 +8,9 @@ body {
   background: #e6e6e6;
   box-sizing: border-box;
   border: 1px solid black;
+  height: 490px;
+  width: 320px;
+  margin: 0 auto;
 }
 
 /* div, td {
@@ -58,16 +61,14 @@ nav h1 {
 }
 
 /* Display */
-.display {
+#display {
   justify-content: flex-end;
   align-items: center;
   height: 88px;
-}
-
-.display h1 {
+  width: 100%;
   text-align: right;
   font-size: 3rem;
-  margin-right: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 /* Keyboard */
@@ -87,6 +88,10 @@ div.row#memory div button {
 
 div.row#memory div button:hover {
   background: #c7c7c7;
+}
+
+.not-in-use {
+  color: rgba(0,0,0,0.5);
 }
 
 div.row {
