--- a/resources/css/reset.css
+++ b/resources/css/reset.css
@@ -24,6 +24,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 	background: none;
 	decoration: none;
+	display: border-box;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
